<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 OpenSilk Productions LLC
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_description">Replace proprietary services with something open, trustworthy and decentralized.</string>

    <!-- Welcome -->
    <string name="welcome_text">Syncthing replaces proprietary sync and cloud services with something open, trustworthy and decentralized.\n\nYour data is your data alone and you deserve to choose where it is stored, if it is shared with some third party and how it\'s transmitted over the Internet.</string>
    <string name="welcome_p0_title">Welcome</string>
    <string name="welcome_p1_title">Syncthing</string>
    <string name="welcome_p2_title">Devices</string>
    <string name="welcome_p3_title">Folders</string>
    <string name="welcome_p4_title">Remote Control</string>
    <string name="welcome_pl_title">Start</string>
    <string name="welcome_pl_generating">Generating secure keys&#8230;\nThis may take a minute or two</string>
    <string name="welcome_pl_ready_title">Syncthing is ready to start</string>
    <string name="welcome_pl_ready">Start now</string>
    <string name="welcome_pl_cancel">Cancel generating secure keys</string>
    <string name="welcome_pl_generating_failed">Key generation failed, contact support</string>
    <string name="welcome_pl_remote">Connect to remote Syncthing</string>
    <string name="welcome_pl_initialize_local_instance">Would you like to initialize the local Syncthing daemon?</string>

    <!--Messages-->
    <string name="input_error">Input Error</string>
    <string name="input_error_message">One or more fields appears to be invalid. If you are sure you want to use them press Save otherwise press Cancel.</string>
    <string name="saving_config_dots">Saving config…</string>
    <string name="config_saved">Config saved</string>
    <string name="are_you_sure_you_want_to_shutdown_syncthing">Are you sure you want to shutdown Syncthing?</string>
    <string name="no_qr_scanner_installed">You have no QR scanner installed or your scanner is not supported. Please install a scanner or enter the device ID manually.</string>
    <string name="no_results">No results</string>

    <!--Buttons-->
    <string name="manage_devices">Manage Devices</string>
    <string name="make_default">Make Default</string>
    <string name="use_tls">Use TLS</string>
    <string name="retry">Retry</string>
    <string name="copy">Copy</string>
    <string name="done">Done</string>

    <!--Misc-->
    <string name="na">N/a</string>

    <!-- Util -->
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <!--Login-->
    <string name="display_name">Display name</string>
    <string name="ip_or_domain">IP address or domain name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fetching_api_key_dots">Fetching api key…</string>
    <string name="login_failure">Login Failure</string>
    <string name="port_number">Port number</string>

    <!--Notification-->
    <string name="syncthing_is_running">Syncthing is running</string>
    <string name="syncthing_died_unexpectedly">Syncthing died unexpectedly</string>

    <!--Accessibility-->
    <string name="accessibility_qr">Open QR Scanner</string>

    <!--Settings service-->
    <string name="service_settings">Syncthing</string>
    <string name="local_instance_disabled">Local Syncthing instance disabled</string>
    <string name="local_instance_enabled">Local Syncthing instance enabled</string>

    <string name="when_to_run">Allow running in background</string>
    <string name="run_always">Always</string>

    <string name="run_between_times">Only during scheduled period</string>
    <string name="scheduled_period">Schedule period</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>

    <string name="overrides">Overrides</string>
    <string name="only_when_charging">Only when charging</string>
    <string name="only_on_wifi">Only on wifi</string>
    <string name="when_connected_to">Only when connected to…</string>

    <string name="miscellaneous">Miscellaneous</string>
    <string name="export_config">Export configuration</string>
    <string name="import_config">Import configuration</string>
    <string name="no_file_picker_found">No file picker found</string>
    <string name="show_file_picker">Open file picker</string>
    <string name="archive_created">Archive created</string>
    <string name="archive_at_location">Archive at:\n%1$s</string>
    <string name="overwrite">Overwrite?</string>
    <string name="overwrite_current_config">Overwrite current config?</string>
    <string name="config_imported">Config imported</string>
    <string name="no_config_found">No config directory found</string>

    <!--Settings ui-->
    <string name="ui_settings">UI</string>
    <string name="keep_screen_on_while_charging">Keep screen on while charging</string>

    <!--Settings about-->
    <string name="opensilk_productions">Created by OpenSilk Productions LLC</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="send_crash_reports_summary">Crash reports are anonymous and secure</string>
    <string name="open_source_licenses">Open source licenses</string>
</resources>